dnl -------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script
dnl $RCSfile: configure.in,v $
dnl $Revision: 1.14 $
dnl $Author: dhakim $
dnl $Date: 2002/10/29 03:54:59 $
dnl -------------------------------------------------------------------

AC_INIT(mmc.sh.in)
AC_CONFIG_HEADER(config.h)

dnl -------------------------------------------------------------------
dnl Check that we are where we're supposed to be 
dnl Set the moto root dir
dnl -------------------------------------------------------------------

AC_PATH_END_CHECK($0,src/mmc)
ROOT_DIR=$ac_cv_path_END_CHECK
AC_SUBST(ROOT_DIR)
CONFIG_ERR=$ROOT_DIR/config.err

dnl -------------------------------------------------------------------
dnl Check for Apache
dnl -------------------------------------------------------------------

AC_DEFINE(APACHE_ROOT_DIR)
AC_APACHE
AC_SUBST(APACHE_ROOT_DIR)

dnl -------------------------------------------------------------------
dnl Define C compiler and flags
dnl -------------------------------------------------------------------

AC_PROG_CC
if test -z "$ac_cv_prog_CC"; then
        $CONFIG_ERR cc
        exit 1
fi
AC_CHECK_GCCLIB
AC_FLAGS_C
CPPFLAGS="$ac_cv_flags_CPP $ac_cv_flags_CPP_MOTO"
DEFSFLAGS=$ac_cv_flags_DEFS
CFLAGS=$ac_cv_flags_C
AC_SUBST(CPPFLAGS)
AC_SUBST(DEFS)
AC_SUBST(CFLAGS)

dnl -------------------------------------------------------------------
dnl Check for libraries.
dnl -------------------------------------------------------------------

dnl -------------------------------------------------------------------
dnl Check for header files.
dnl -------------------------------------------------------------------

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h)

dnl -------------------------------------------------------------------
dnl Check for typedefs, structures, and compiler characteristics.
dnl ------------------------------------------------------------------

AC_C_CONST

dnl -------------------------------------------------------------------
dnl Check for library functions.
dnl -------------------------------------------------------------------

dnl -------------------------------------------------------------------
dnl Output files
dnl -------------------------------------------------------------------

AC_LAYOUT

AC_OUTPUT(Makefile mmc.sh)

dnl -------------------------------------------------------------------
dnl end
dnl -------------------------------------------------------------------

