dnl -------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script
dnl $RCSfile: configure.in,v $
dnl $Revision: 1.13 $
dnl $Author: dhakim $
dnl $Date: 2002/10/30 19:06:49 $
dnl -------------------------------------------------------------------

AC_INIT(cell.h)
AC_CONFIG_HEADER(config.h)

dnl -------------------------------------------------------------------
dnl Check that we are where we're supposed to be 
dnl Set the moto root dir
dnl -------------------------------------------------------------------

AC_PATH_END_CHECK($0,src/mxc)
ROOT_DIR=$ac_cv_path_END_CHECK
AC_SUBST(ROOT_DIR)
CONFIG_ERR=$ROOT_DIR/config.err

dnl -------------------------------------------------------------------
dnl Define C compiler and flags
dnl -------------------------------------------------------------------

AC_PROG_CC
if test -z "$ac_cv_prog_CC"; then
        $CONFIG_ERR cc
        exit 1
fi

AC_FLAGS_C
CPPFLAGS="$ac_cv_flags_CPP $ac_cv_flags_CPP_MOTO"
DEFSFLAGS=$ac_cv_flags_DEFS
CFLAGS=$ac_cv_flags_C

MX_LDFLAGS="-L\${LIB_DIR} \${MY_LIB} \${EXLDPATH} -shared "

AC_PROG_LEX

AC_CANONICAL_HOST
case "$host" in
*apple*)
        MX_LDFLAGS="-L\${LIB_DIR} \${MY_LIB} \${EXLDPATH} -bundle -shared -undefined suppress -flat_namespace" ;;
*solaris*)
        CPPFLAGS="$ac_cv_flags_CPP $ac_cv_flags_CPP_MOTO -U__GNUC__" ;;
esac

AC_SUBST(MX_LDFLAGS)

dnl -------------------------------------------------------------------
dnl Check for libraries.
dnl -------------------------------------------------------------------

dnl -------------------------------------------------------------------
dnl Check for header files.
dnl -------------------------------------------------------------------

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl -------------------------------------------------------------------
dnl Check for typedefs, structures, and compiler characteristics.
dnl ------------------------------------------------------------------

AC_C_CONST
AC_TYPE_SIZE_T

dnl -------------------------------------------------------------------
dnl Check for library functions.
dnl -------------------------------------------------------------------

AC_CHECK_FUNCS(getcwd strstr)

dnl -------------------------------------------------------------------
dnl Output files
dnl -------------------------------------------------------------------

AC_OUTPUT(Makefile mxc.sh mxcg.properties)

dnl -------------------------------------------------------------------
dnl end
dnl -------------------------------------------------------------------

