dnl -------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script
dnl $RCSfile: configure.in,v $
dnl $Revision: 1.7 $
dnl $Author: dhakim $
dnl $Date: 2002/10/02 21:54:27 $
dnl -------------------------------------------------------------------

AC_INIT(ftw.c)
AC_CONFIG_HEADER(config.h)

dnl -------------------------------------------------------------------
dnl Check that we are where we're supposed to be 
dnl Set the moto root dir
dnl -------------------------------------------------------------------

AC_PATH_END_CHECK($0,src/tools)
ROOT_DIR=$ac_cv_path_END_CHECK
AC_SUBST(ROOT_DIR)
CONFIG_ERR=$ROOT_DIR/config.err

dnl -------------------------------------------------------------------
dnl Define C compiler and flags
dnl -------------------------------------------------------------------

AC_PROG_CC
if test -z "$ac_cv_prog_CC"; then
        $CONFIG_ERR cc
        exit 1
fi

AC_FLAGS_C
CPPFLAGS="$ac_cv_flags_CPP $ac_cv_flags_CPP_MOTO"
DEFSFLAGS=$ac_cv_flags_DEFS
CFLAGS=$ac_cv_flags_C
AC_SUBST(CPPFLAGS)
AC_SUBST(DEFS)
AC_SUBST(CFLAGS)

dnl -------------------------------------------------------------------
dnl Checks for header files.
dnl -------------------------------------------------------------------

AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(stdint.h inttypes.h)

dnl -------------------------------------------------------------------
dnl Check for libraries
dnl -------------------------------------------------------------------

dnl -------------------------------------------------------------------
dnl Check for library functions
dnl -------------------------------------------------------------------

AC_CHECK_FUNCS(ftw)
if test $ac_cv_func_ftw != yes; then
        FTW_O=ftw.o
fi
AC_SUBST(FTW_O)

dnl -------------------------------------------------------------------
dnl Output files
dnl -------------------------------------------------------------------

AC_OUTPUT(Makefile)

dnl -------------------------------------------------------------------
dnl end
dnl -------------------------------------------------------------------


